--- a/.github/workflows/main2.yaml
+++ b/.github/workflows/main2.yaml
@@ -7,9 +7,9 @@ jobs:
   Lint:
     runs-on: ubuntu-latest
     steps:
-      name: Check out repository code
-      uses: actions/checkout@v4
-      uses: actions/setup-node@v4
-      with:
-        node-version: '16'
-      run: npm audit || exit 0
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '16'
+      - run: npm audit || exit 0
