--- a/.github/workflows/main2.yaml
+++ b/.github/workflows/main2.yaml
@@ -3,9 +3,31 @@ run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: 
   push:
     branches: ["main", "workshop1"]
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 jobs:
   Lint:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
+        uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+        with:
+          node-version: '16'
+      - run: npm audit || exit 0
