--- a/.github/workflows/mainvariables.yml
+++ b/.github/workflows/mainvariables.yml
@@ -2,6 +2,8 @@ name: GitHub Actions Demo Bootcamp CICD
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   workflow_dispatch:
+env:
+  DUMMY: Santafe
 jobs:
   Lint:
     runs-on: ubuntu-latest
